--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li>Móveis de garrafas PET</li>
         <li>Móveis de latinhas de alumínio</li>
         <li>Móveis de Papelão</li>
+        <li>Moveis de papel reciclado</li>
+        <li>Móveis de palets</li>
     </ul>
 </body>
 </html>
